Fixed profile img spacing
- Added spacing at the bottom

--- a/css/style.css
+++ b/css/style.css
@@ -981,6 +981,10 @@ picture .logo {
     margin-left: auto;
     margin-right: auto;
   }
+
+  .profile {
+    padding-bottom: 16px;
+  }
 }
 
 /* ==============================
